# parsepayslip

./: README  __init__.py  glossary.py  parsepayslip.py  pyproject.toml
parsepayslip/: glossary.py  parse.py
